<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edittext_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        android:text="@string/intent_exercise_text"
        tools:ignore="LabelFor,TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/button_open_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/intent_exercise_open_website" />

    <EditText
        android:id="@+id/edittext_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/intent_exercise_edit_location"
        tools:ignore="LabelFor,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/button_open_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/intent_exercise_open_location" />

    <EditText
        android:id="@+id/edittext_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/some_text"
        tools:ignore="LabelFor,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/button_share_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/share_text" />

    <Button
        android:id="@+id/button_take_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_photo"
        tools:ignore="VisualLintButtonSize" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        app:srcCompat="@drawable/baseline_baby_changing_station_24"
        tools:ignore="ContentDescription" />

</LinearLayout>