<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button"
    style="b"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_toast"
        android:layout_width="157dp"
        android:layout_height="64dp"
        android:layout_marginTop="116dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/button_label_toast"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/button_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button_count"
        android:layout_width="157dp"
        android:layout_height="54dp"
        android:layout_marginTop="180dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/button_label_count"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/show_count"
        android:layout_width="185dp"
        android:layout_height="230dp"
        android:layout_marginTop="68dp"
        android:background="#FFFF00"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/count_initial_value"
        android:textColor="@color/purple_500"
        android:textSize="160sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_count"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="157dp"
        android:layout_height="64dp"
        android:layout_marginBottom="433dp"
        android:backgroundTint="@android:color/darker_gray"

        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>